--- a/docs/LinearGK.tex
+++ b/docs/LinearGK.tex
@@ -1,3 +1,8 @@
+
+%
+% Copyright Ian G. Abel 2018
+% 
+
 \documentclass[prb,aps,amssymb,amsmath,a4paper]{revtex4}
 \usepackage{graphicx}
 \usepackage{bm,ulem,color}
