Implementing better handling for multiple scans in a single input file.
Implementing normalizations for the output.

Fix the handling of the Gamma<i,j,k> functions at large argument (double
 underflows), and add tests to check.

Improve documentation, including derivation of the GK dispersion
relation.

Add an example to generate some of the plots from Howes et. al.

--- a/docs/LinearGK.tex
+++ b/docs/LinearGK.tex
@@ -9,7 +9,7 @@
 
 \sloppy
 
-\include{macros/gyrokinetics-macros}
+\include{gyrokinetics-macros}
 \providecommand{\coll}[4]{ \ensuremath{C_{#1\,#2}[#3,#4]}}
 \providecommand{\lorentz}[1]{\ensuremath{\mathcal{L}}[#1]}
 \providecommand{\nuD}[2]{\ensuremath{\nu_{D}^{#1\,#2}}}
@@ -229,7 +229,7 @@ With this notation we arrive at the same dispersion relation as \cite{howes2006a
 	  \left( \frac{\alpha_i A}{\overline{\omega}^2} - AB + B^2\right)\left(\frac{2A}{\beta_i} - AD + C^2\right) = \left( AE + BC \right)^2
 	  \end{align}
 with the generalised definitions above. The definitions of our $D_{i\,j}$ also correspond (with a slight renumbering) to the shear free magnetic field limit of the standard low frequency linear dispersion relation in e.g. \cite{pu1985fbs}.
-\bibliographystyle{revtex4}
+\bibliographystyle{apsrev4-1}
 \bibliography{references.bib}
 \end{document}
 
